add router and main nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,4 @@
 
-<!-- NO FISHI's labratory WEB site -->
-<!-- Author: no-fishi -->
-<!-- License: MIT -->
-<!-- [v0.1.0 - 2024/04/01] Initial project commit -->
-
-<mat-toolbar color = "accent">
-  <div style = "text-align: center; width: 100%;">
-      Welcome to NO FISHI's Lab!
-  </div>
-</mat-toolbar>
-
-<div style = "text-align: center; width: 100%;">
-{{title}} product works!
-</div>
+<main-nav>
+  <router-outlet></router-outlet>
+</main-nav>
