--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height : 100%;
+}
+
+body {
+  font-family : Roboto, "Helvetica Neue", sans-serif;
+}
+
+/* mat-toolbar styles */
+mat-toolbar {
+  color            : white;
+  background-color : rgba(0, 0, 0, 0.4);
+}
+
+/* mat-card styles */
+mat-card {
+  color        : white;
+  background   : blue;
+  margin-right : 20%;
+  margin-left  : 20%;
+}
