--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
-<main-nav>
-  <router-outlet></router-outlet>
-</main-nav>
+<!-- <main-nav> contains common page header such as title and page navigation tabs -->
+<main-nav></main-nav>
+<!-- <router-outlet> shows content of the navigated page -->
+<router-outlet></router-outlet>
