change tab style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 </div>
 -->
 
-<mat-tab-group mat-align-tabs = "center" backgroundColor = "primary">
+<mat-tab-group mat-align-tabs = "center" color = "accent">
   <!-- Tab for home -->
   <mat-tab>
     <ng-template mat-tab-label>
