modify link preview layer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
     <ng-template mat-tab-label>
       <mat-icon>account_circle</mat-icon>Social media
     </ng-template>
-    <app-home></app-home>
+    <app-socialmedia></app-socialmedia>
   </mat-tab>
   <!-- Tab for bioinformatics tool playground -->
   <mat-tab>
